--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,15 @@
 .App {
-  text-align: center;
-}
+  text-align: center; }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+.logo {
+  width: 150px; }
 
 .App-header {
   height: 150px;
-  padding: 20px;
-  color: white;
-}
+  padding: 20px; }
 
 .App-title {
-  font-size: 1.5em;
-}
+  font-size: 1.5em; }
 
 .App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+  font-size: large; }
