--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,12 @@
 
 .product-list {
   padding: 3em 0; }
+
+form {
+  display: inline-block;
+  width: 300px; }
+  form label {
+    display: block;
+    margin-top: 1em; }
+  form button {
+    margin-top: 1em; }
