--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,9 @@ form {
     display: block;
     margin-top: 1em;
   }
-
+  input {
+    margin-left: 1em;
+  }
   button {
     margin-top: 1em
   }
