Checkpoint: redux dependencies installed, basic view is hooked up

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,7 @@
+* { box-sizing: border-box; }
+a { color: cornflowerblue; text-decoration: underline; cursor: pointer; }
+body { margin: 0; padding: 0; font-family: sans-serif;}
+
 .App {
   text-align: center;
 }
