--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,14 +6,13 @@ body { margin: 0; padding: 0; font-family: sans-serif;}
   text-align: center;
 }
 
+.Header {
+  padding: 3.5%;
+}
 .logo {
-  width: 150px;
+  width: 42.5%;
 }
 
-.App-header {
-  height: 150px;
-  padding: 20px;
-}
 
 .App-title {
   font-size: 1.5em;
