--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,39 +5,14 @@ body { margin: 0; padding: 0; font-family: sans-serif;}
 .App {
   text-align: center;
 }
-
 .Header {
   padding: 3.5%;
 }
 .logo {
   width: 42.5%;
 }
-
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-.product-list {
-  padding: 3em 0;
-}
-
-form {
-  display: inline-block;
-  width: 300px;
-
-  label {
-    display: block;
-    margin-top: 1em;
-  }
-  input {
-    margin-left: 1em;
-  }
-  button {
-    margin-top: 1em
-  }
+main {
+  background-image: url("../images/bg_mobile.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
