--- a/src/styles/Signup.scss
+++ b/src/styles/Signup.scss
@@ -1,25 +1,23 @@
+@import "App.scss";
+
+@mixin formElement() {
+  height: 36px;
+  border-radius: 36px;
+  margin: calc(#{$padding} / 2) calc(#{$padding} * 2);
+}
+
 .Signup {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  label {
-    display: block;
+  form {
+    display: flex;
+    flex-direction: column;
   }
-
-  input[type="email"] {
-    display: block;
-    margin-top: 1em;
+  input {
+    text-align: center;
+    @include formElement;
   }
-
   button {
-    margin-top: 2em;
-  }
-
-  .killme {
-    margin-top: 2em;
+    background-color: $teal;
+    color: white;
+    @include formElement;
   }
 }
