--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,37 +2,28 @@
 a { color: cornflowerblue; text-decoration: underline; cursor: pointer; }
 body { margin: 0; padding: 0; font-family: sans-serif;}
 
-$teal: #3AAAB2;
-$borderColor: #CCCCCC;
-$lightGrayText: #D8D8D8;
 
 $primaryText: #454545;
 $secondaryText: #616575;
-
+$lightGrayText: #D8D8D8;
 $formPlaceholder: #A4A4A4;
-
+$iconOff: #C1C1C1;
+$borderColor: #CCCCCC;
 $lightGrayBg: #F1F1F1;
+$teal: #3AAAB2;
 $darkPink: #C62786;
 $green: #9DCF67;
-$iconOff: #C1C1C1;
 
 $padding: 12px;
-
 $aboutIcon: 53px;
-
 $serif: serif;
 $sans: sans-serif;
 
-@mixin section() {
-  background: white;
-  border: 1px solid $borderColor;
-  margin: $padding;
-  padding: $padding;
+@mixin desktop() {
+  @media only screen and (min-width: 769px) { @content }
 }
 
-* {
-  margin: 0;
-}
+* { margin: 0; }
 
 .App {
   background-image: url("../images/bg_mobile.jpg");
@@ -41,7 +32,17 @@ $sans: sans-serif;
   background-position-y: 61px;
   text-align: center;
   section {
-    @include section;
+    background: white;
+    border: 1px solid $borderColor;
+    margin: $padding;
+    padding: $padding;
+    @include desktop() {
+      max-width: 715px;
+      margin: $padding auto;
+    }
+  }
+  @include desktop() {
+    background-image: url("../images/bg_desktop.jpg");
   }
 }
 
@@ -160,6 +161,9 @@ hr {
     background-image: url("../images/bg_login.png");
     background-size: cover;
     padding: 40px 20px;
+    @include desktop() {
+      background-image: url("../images/bg_login_desktop.png");
+    }
   }
 }
 
@@ -215,6 +219,15 @@ hr {
   p {
     background-color: white;
     padding: calc(#{$padding} * 2);
+    @include desktop() {
+      max-width: 715px;
+      margin: 0 auto;
+      padding: calc(#{$padding} * 2) calc(#{$padding} * 4);
+    }
+  }
+  @include desktop() {
+    background-image: url("../images/about/bg_why_desktop.jpg");
+    background-position: bottom;
   }
 }
 
