--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,5 @@
 * { box-sizing: border-box; }
-a { color: cornflowerblue; text-decoration: underline; cursor: pointer; }
-body { margin: 0; padding: 0; font-family: sans-serif;}
+body, h1, h2, h3, p { margin: 0; padding: 0;}
 
 
 $primaryText: #454545;
@@ -22,8 +21,6 @@ $sans: sans-serif;
 @mixin desktop() {
   @media only screen and (min-width: 769px) { @content }
 }
-
-* { margin: 0; }
 
 .App {
   background-image: url("../images/bg_mobile.jpg");
@@ -64,31 +61,14 @@ hr {
   margin: calc(#{$padding} * 2);
   color: $lightGrayText;
 }
-.Header {
-  padding: calc(#{$padding} * 2);
-
-  h1 {
-    color: $teal;
-    margin-top: calc(#{$padding} * 5);
-  }
-  h2 {
-    margin: calc(#{$padding} * 2)
-  }
-  h3 {
-    font-size: 18px;
-    line-height: 26px;
-    font-family: $sans;
-    color: $secondaryText;
-  }
-  .logo {
-    width: 137px;
-  }
-}
-
 .Footer {
   height: 120px;
   background-color: $lightGrayBg;
   padding: calc(#{$padding} * 1.5);
+  @include desktop() {
+    max-width: 750px;
+    margin: 0 auto;
+  }
 
   div {
     float: left;
@@ -107,152 +87,5 @@ hr {
     float: right;
     width: 27px;
     margin-left: $padding;
-  }
-}
-
-.Ratings {
-  svg {
-    padding: 1px;
-  }
-  svg path {
-    fill: $iconOff;
-  }
-}
-.About {
-  h2, h3, span {
-    color: $primaryText;
-  }
-  h2 {
-    padding: $padding 0;
-  }
-  h3 {
-    margin-top: calc(#{$padding} * 3);
-    margin-bottom: calc(#{$padding} * 2);
-  }
-  p {
-    color: $secondaryText;
-  }
-  .icons {
-    display: flex;
-    flex-direction: column;
-  }
-  .icons div {
-    display: flex;
-    margin: 0 calc(#{$padding} * 3);
-    align-items: center;
-  }
-  .icons img {
-    width: $aboutIcon;
-    height: $aboutIcon;
-    margin: 0 $padding $padding 0;
-  }
-  .pink {
-    color: $darkPink;
-  }
-  .green * {
-    color: $green;
-    fill: $green;
-  }
-  .rating-list {
-    display: flex;
-    justify-content: center;
-  }
-  .signup {
-    background-image: url("../images/bg_login.png");
-    background-size: cover;
-    padding: 40px 20px;
-    @include desktop() {
-      background-image: url("../images/bg_login_desktop.png");
-    }
-  }
-}
-
-.GoodFor {
-  padding: calc(#{$padding} * 3) 0;
-  border: 1px solid $borderColor;
-
-  .rating {
-    width: 150px;
-  }
-  ul {
-    padding: $padding;
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-    list-style-image: url("../images/about/icon_check.svg");
-    list-style-position: inside;
-  }
-  li {
-    padding-bottom: $padding;
-    color: $secondaryText;
-    width: 50%;
-  }
-}
-
-.Example {
-  padding-top: calc(#{$padding} * 2);
-
-  p {
-    margin: $padding;
-  }
-  .versus {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-
-    .left {
-      display: none;
-    }
-  }
-  .patent {
-    color: #959595;
-    font-size: 13px;
-    line-height: 20px;
-  }
-}
-
-.Why {
-  background-image: url("../images/about/bg_why.png");
-  background-size: cover;
-  padding: calc(#{$padding} * 4);
-
-  p {
-    background-color: white;
-    padding: calc(#{$padding} * 2);
-    @include desktop() {
-      max-width: 715px;
-      margin: 0 auto;
-      padding: calc(#{$padding} * 2) calc(#{$padding} * 4);
-    }
-  }
-  @include desktop() {
-    background-image: url("../images/about/bg_why_desktop.jpg");
-    background-position: bottom;
-  }
-}
-
-.Categories {
-  padding: 40px 20px 30px 20px;
-  .grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
-    div {
-      position: relative;
-      width: 50%;
-      padding: 5px;
-      img {
-        width: 100%;
-        height: 100%;
-      }
-    }
-    p {
-      font-family: $serif;
-      color: $secondaryText;
-      position: absolute;
-      top: $padding;
-      width: 100%;
-    }
   }
 }
