--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -2,10 +2,14 @@
 
 .Header {
   padding: calc(#{$padding} * 2);
+  @include desktop() {
+    max-width: 750px;
+    margin: 0 auto;
+  }
 
   h1 {
     color: $teal;
-    margin-top: calc(#{$padding} * 5);
+    margin-top: calc(#{$padding} * 4);
   }
   h2 {
     margin: calc(#{$padding} * 2)
@@ -15,6 +19,10 @@
     line-height: 26px;
     font-family: $sans;
     color: $secondaryText;
+    padding: 0 10%;
+    @include desktop() {
+      padding: 0 20%;
+    }
   }
   .logo {
     width: 137px;
