Extract shared variable and mixin definitions to variables.scss

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,6 +1,6 @@
 // trying the look of all styles on one line...
 
-@import "App.scss";
+@import "variables.scss";
 
 .About {
   h2, h3, span { color: $primaryText; }
