--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
 @import "variables.scss";
 
-* { box-sizing: border-box; }
+* { box-sizing: border-box; font-family: $sans; }
 body, h1, h2, h3, p { margin: 0; padding: 0;}
 
 .desktop { display: none;
