--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=PT+Serif');
+@import "../../node_modules/shopterra-styles/index.scss";
 @import "variables.scss";
 
 * { box-sizing: border-box; font-family: $sans; }
