--- a/src/styles/Signup.scss
+++ b/src/styles/Signup.scss
@@ -12,12 +12,11 @@
   form {
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
     * {
       font-size: 16px;
       padding: $padding;
       border-radius: 36px;
-      margin: calc(#{$padding} / 2) calc(#{$padding} * 2);
+      margin: calc(#{$padding} / 2) 0;
     }
     @include desktop() {
       flex-direction: row;
