--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -16,4 +16,8 @@ $sans: 'Montserrat', sans-serif;
 
 @mixin desktop() {
   @media only screen and (min-width: 768px) { @content }
-}
+};
+
+@mixin xl() {
+  @media only screen and (min-width: 1136px) { @content }
+};
