--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,10 +1,67 @@
 @import "variables.scss";
 
 .Header {
-  padding: calc(#{$padding} * 2) 0 $padding 0;
-  border-bottom: 1px solid $lightGray;
+  height: 60px;
+  position: relative;
+  @include desktop() {
+    margin: 0 auto;
+  }
 
+  h1 {
+    color: $teal;
+    margin-top: calc(#{$padding} * 4);
+    font-size: 28px;
+    @include desktop() {
+      font-size: 36px;
+    }
+  }
+  h2 {
+    margin: calc(#{$padding} * 2);
+    font-size: 14px;
+    line-height: 22px;
+    @include desktop() {
+      font-size: 18px;
+    }
+  }
+  h3 {
+    font-size: 16px;
+    line-height: 26px;
+    font-family: $sans;
+    color: $secondaryText;
+    padding: 0 10%;
+    @include desktop() {
+      padding: 0 20%;
+    }
+  }
   .logo {
-    width: 150px;
+    width: 137px;
+    position: absolute;
+    left: $padding;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+  }
+  svg {
+    position: absolute;
+    right: $padding;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 30px;
+    height: 20px;
+  }
+
+  ul {
+    float: right;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    height: 60px;
+
+    li { display: inline-block }
   }
 }
